// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The Starter Block when given custom data should render the block using the custom data 1`] = `
<h1>
  Custom Block Text
</h1>
`;

exports[`The Starter Block when there is no custom data should render the block with the default content 1`] = `
<h1>
  Element Starter Block
</h1>
`;
